[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = ""
authors = ["Johannes Birk <Johannes.Birk11@web.de>"]
readme = "documentation/source/index.rst"
packages = [{include = "rag-backend"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "22.*"
flake8 = "6.*"
pre-commit = "*"
sphinx = "*"
sphinx-autoapi = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
